--- a/style.css
+++ b/style.css
@@ -436,28 +436,19 @@ form .btn-2:hover {
 }
 
 
-
-@media only screen and (max-width: 600px) {
-  .services-List div,
-  .work,
-  .column-1 img,
-  .column-2,
-  .header-text,
-  .header-image img {
-    animation: fadeInUp 1s ease forwards;
-  }
-
-  @keyframes fadeInUp {
-    0% {
-      opacity: 0;
-      transform: translateY(30px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
+.scroll-in {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.6s ease-out;
 }
+
+.scroll-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+
 
 
 
