--- a/style.css
+++ b/style.css
@@ -434,31 +434,19 @@ form .btn-2:hover {
   background-color: #d5ff00;
   border-radius: 50%;
 }
-/* Enhance interactivity on small devices */
+
+
+
 @media (hover: none) and (pointer: coarse) {
-  .services-List div {
-    background: #ff004f;
-    transform: translateY(-10px);
-  }
-
-  .work img {
-    transform: scale(1.1);
-  }
-
-  .work .layer {
-    height: 100%;
-  }
-
-  /* Optional smooth load-in effect for sections */
   .services-List div,
   .work {
     opacity: 0;
-    transform: translateY(40px);
-    animation: fadeUp 0.6s ease-out forwards;
+    transform: translateY(30px);
+    animation: fadeInMobile 0.6s ease-out forwards;
     animation-delay: 0.2s;
   }
 
-  @keyframes fadeUp {
+  @keyframes fadeInMobile {
     to {
       opacity: 1;
       transform: translateY(0);
