--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    top: 0;
-    position: sticky;
+    flex-wrap: wrap;
 
 }
 .logo {
